# pray-bot

./: main.py  pyproject.toml  requirements.txt  setup.sql
cogs/: activity.py  database.py  events.py  leaderboards.py  owner.py  personal.py
util/: help.py  xp_funcs.py
