[tool.poetry]
name = "repl_python3_pray-bot"
version = "0.1.0"
description = ""
authors = ["gritor111 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
asyncpg = "^0.24.0"
APScheduler = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
